projetos/local/superset/deployment-celerybeat.yaml
# Patch para o Celery Beat (scheduler)
apiVersion: apps/v1
kind: Deployment
metadata:
  name: superset-celerybeat
  namespace: superset
spec:
  template:
    spec:
      containers:
      - name: superset-celerybeat
        image: apache/superset:4.1.3
        resources:
          requests:
            cpu: "100m"
            memory: "256Mi"
          limits:
            cpu: "200m"
            memory: "256Mi"
