projetos/local/superset/deployment-worker.yaml
# Patch para o Celery Worker
apiVersion: apps/v1
kind: Deployment
metadata:
  name: superset-worker
  namespace: superset
spec:
  replicas: 1
  template:
    spec:
      containers:
      - name: superset
        image: apache/superset:4.1.0
        resources:
          requests:
            cpu: "200m"
            memory: "512Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"
